@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 March 4, 2011
+* [antonin] now assume MinGW does not have dirent.h (actually have it but without opendir function). Fixed also a WIN32 check in jp3d/libjp3dvm/openjpeg3d.h.
 ! [antonin] updated autotools files to improve build and install procedures (credit to Vincent Torri).
 
 February 17, 2011
